fixes layout issue (#2840)

--- a/static/scss/search-page.scss
+++ b/static/scss/search-page.scss
@@ -160,6 +160,10 @@
         background-color: $mm-brand-bg-light;
       }
 
+      .sk-range-slider {
+        margin-top: -5px;
+      }
+
       .is-out-of-bounds {
         background-color: $medgrey;
       }
